# SimpCL

./: CMakeLists.txt  README.md  makefile
include/simpcl/: error.h  map.h  string.h  utils.h  vector.h
src/: map.c  string.c  vector.c
tests/: string_test.c  vector_test.c
tests/map/: first_map.c
tests/string/: greeting.c  helloworld.c
tests/vector/: concat.c  life_cycle.c  push_at.c
